[project]
name = "kidney-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp~=3.14",
    "shakespeare-insult~=1.0",
    "discord-py[voice]~=2.7",
    "davey~=0.1",
    "dnspython~=2.8",
    "faker~=37.12",
    "humanfriendly~=10.0",
    "humanize~=4.15",
    "pilcord",
    "psutil~=7.2",
    "pymongo~=4.17",
    "pyyaml~=6.0",
    "regex~=2024.11",
    "requests~=2.34",
    "toml~=0.10",
    "wikipedia~=1.4",
    "spotdl~=4.5",
    "yt-dlp~=2026.6",
]

[tool.uv.sources]
pilcord = { git = "https://github.com/alec-jensen/pilcord.git", rev = "8dcb7631824625e7020456e8394decfc3fbf1217" }
