[project]
name = "kidney-bot"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp~=3.14",
    "shakespeare-insult~=1.0",
    "discord-py[voice]~=2.7",
    "davey~=0.1",
    "dnspython~=2.8",
    "faker~=37.12",
    "humanfriendly~=10.0",
    "humanize~=4.15",
    "psutil~=7.2",
    "pymongo~=4.17",
    "pyyaml~=6.0",
    "regex~=2026.6",
    "requests~=2.34",
    "toml~=0.10",
    "wikipedia~=1.4",
    "spotdl~=4.5",
    "yt-dlp~=2026.6",
]

[dependency-groups]
dev = [
    "pyright>=1.1.411",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "RUF",  # ruff-specific
    "PIE",  # flake8-pie
    "RET",  # flake8-return
    "PERF", # perflint
]
ignore = [
    "E501",    # line-length enforced by formatter instead
    "B008",    # function call in default arg (discord.py Group pattern)
    "B904",    # raise-without-from inside except
    "RUF012",  # mutable class var annotation (discord.py View patterns)
    "RET505",  # superfluous else after return
    "RET506",  # superfluous else after raise
    "PERF203", # try-except in loop
]

[tool.ruff.lint.isort]
known-first-party = ["utils", "cogs"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
include = ["kidney-bot"]
pythonVersion = "3.13"
typeCheckingMode = "strict"
reportMissingModuleSource = false
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportUnknownParameterType = false
reportMissingTypeArgument = false
reportPrivateUsage = false
reportUnnecessaryTypeIgnoreComment = false
reportAny = false
reportExplicitAny = false
venvPath = "."
venv = ".venv"
